clinical paper first draft complete

--- a/report/clinical/mainmatter/discussion.tex
+++ b/report/clinical/mainmatter/discussion.tex
@@ -1,8 +1,8 @@
 % !TEX root =  ../main_manuscript.tex 
 \section{Discussion}
-We developed personalized schedules for repeat biopsies in PCa patients enrolled in AS programs. These schedules were based on a patient's risk for having a Gleason~$\geq$~7 (GS7). Patient- and visit-specific risks of GS7 were estimated using their entire history of PSA and repeat biopsies, and baseline characteristics. Consequently, the personalized schedules were updated as more data was gathered over follow-up. Risk calculators for GS7 are not new \citep{coley2017prediction,ankerst2015precision}. However, the novelty of our work is that we developed a methodology for scheduling personalized biopsies using those risks, as well a methodology to compare schedules, be it personalized or fixed, in simple terms of burden and benefit. More specifically, for each schedule we provided patients the times of biopsy and total biopsies (burden), and the delay in detection of GS7 (less is beneficial) expected due to that schedule. We also implemented our methodology in a web-application.
+We developed personalized schedules for repeat biopsies in PCa patients enrolled in AS programs. These schedules were based on a patient's risk for having a Gleason~$\geq$~7 (GS7). Patient- and visit-specific risks of GS7 were estimated using their entire history of PSA and repeat biopsies, and baseline characteristics. Consequently, the personalized schedules were updated as more data was gathered over follow-up. Risk calculators for GS7 are not new \citep{coley2017prediction,ankerst2015precision}. However, the novelty of our work is that we developed a methodology for scheduling personalized biopsies using those risks, and also a methodology to compare schedules, be it personalized or fixed, in simple terms of burden and benefit. More specifically, for each schedule we provided patients the times of biopsy and total biopsies (burden), and the time delay in detection of GS7 (less is beneficial) expected due to that schedule. We also implemented our methodology in a web-application.
 
-The proposed joint model accounted for the complex correlation structure that exists between longitudinal PSA measurements and time of GS7 of a patient. It also accounted for PSA measurements that were missing in patients who obtained GS7. This model adjusts the risks of GS7 upon a negative repeat biopsy. Thus complete patient information in consolidated into a single patient risk profile. Our model is fitted to the world's largest PCa AS program, PRIAS. We also validated our model predictions for GS7 in external cohorts that are part of the GAP3 database \citep{gap3_2018}. We found that the discrimination and calibration measures of the predictions from our model (Table~\ref{table:prediction_validation}) were similar for PRIAS (internal validation), and Toronto and Johns Hopkins cohorts (external validation). Given the large size of these cohorts, we expect that our model and the methodology will be useful to a large number of AS patients. Extending our model and methodology in other cohorts only requires fitting the model to their AS dataset.
+The proposed joint model accounted for the complex correlation structure that exists between longitudinal PSA measurements and time of GS7 of a patient. It also accounted for PSA measurements that were missing in patients who obtained GS7. This model adjusts the risks of GS7 upon a negative repeat biopsy. Thus complete patient information in consolidated into a single patient risk profile. Our model is fitted to the world's largest PCa AS program, PRIAS. We also externally validated our model predictions for GS7 in five largest AS cohorts that are part of the GAP3 database \citep{gap3_2018}. We found that the AUC for predictions of GS7 over the follow-up period (Figure~\ref{fig:auc_pe}) was similar in external cohorts and PRIAS (internal validation). The RMSPE however was similar to PRIAS only for Memorial Sloan Kettering Cancer Center and Johns Hopkins cohorts. Given the large size of the latter two cohorts, we expect that our model and the methodology will be useful to a large number of AS patients. Extending our model and methodology in other cohorts only requires fitting the model to their AS dataset.
 
 The clinical implications of our work are as follows. The median survival time for GS7 is more than ten years in PRIAS, and in some other cohorts (Figure~\ref{fig:npmle_plot}). That is, more than 50\% of AS patients do not require any biopsy during the first ten years of follow-up. We hope that our work will address patient apprehensions regarding adverse outcomes in AS, in a more objective manner. Many AS programs still utilize a rigorous schedule of yearly biopsies \citep{nieboer2018active}. However, with concerns about non-compliance and burden of biopsies \citep{bokhorst2015compliance}, the availability of our web based tool may encourage patients and doctors to consider personalized schedules.
 
