--- a/report/clinical/mainmatter/abstract.tex
+++ b/report/clinical/mainmatter/abstract.tex
@@ -2,9 +2,9 @@
 \begin{abstract}
 \texttt{Background}: Low-risk prostate cancer patients enrolled in active surveillance (AS) undergo repeat biopsies. Treatment often advised when biopsy Gleason~$\geq$~7 (GS7). Many patients never obtain GS7, yet undergo biopsies frequently.\\
 \texttt{Objective}: Better balance the number of biopsies and time delay in detection of GS7.\\
-\texttt{Design, Setting, and Participants}: World's largest AS study PRIAS, 7813 patients, 1134 obtained GS7, 100 medical centers in 17 countries, common study protocol and online tool for data collection.\\
-\texttt{Outcome Measurements, and Statistical Analysis}: Prostate-specific antigen (PSA) measured every six months, repeat biopsies every one to three years. Bayesian joint model fitted to the observed time of GS7 and longitudinal PSA measurements. Predictions for GS7 externally validated in five largest AS cohorts (GAP3 database). Predictions utilized to develop risk based biopsy schedules, and then compared with fixed schedules on the basis of total biopsies and expected delay in detection of GS7.\\
-\texttt{Results and Limitations}: Roughly 50\% patients do not obtain GS7 in first 10 years in PRIAS. Rate of change of (log-transformed) PSA was a stronger predictor of GS7 (Hazard~Ratio:~2.45,~95\%CI: 1.83--2.95) than PSA value (Hazard~Ratio:~1.00,~95\%CI:~0.98--1.02). Internal validation: Time varying area under ROC curve for GS7 prediction ranged between 0.xx and 0.xx, and prediction error between 0.xx and 0.xx. External validation: Results similar to internal validation only for Toronto and Johns Hopkins cohorts.\\
-\texttt{Conclusions}: We developed personalized risk based biopsy schedules as alternative to fixed schedules. For both fixed and personalized schedules we provide total biopsies, time of biopsies, and expected time delay in detection of GS7. Personalized schedules update with more patient data gathered over follow-up.\\
-\texttt{Patient Summary}: Risk based biopsy schedules are a novel alternative to fixed biopsy schedules (e.g., yearly biopsies). They utilize a patient's PSA history and biopsy history to decide best time of biopsies in future. Such personalized schedules can offer a better balance between number of biopsies and delay in detection of Gleason upgrade than yearly biopsies.
+\texttt{Design, Setting, and Participants}: World's largest AS study PRIAS, 7813 patients, 1134 obtained GS7, 100 medical centers in 17 countries, common study protocol.\\
+\texttt{Outcome Measurements, and Statistical Analysis}: Prostate-specific antigen (PSA) measured every six months, repeat biopsies every one to three years. Bayesian joint model fitted to the observed time of GS7 and longitudinal PSA measurements. Risk predictions for GS7 externally validated in five largest AS cohorts from GAP3 database. Personalized risk based biopsy schedules developed using GS7 predictions. Total biopsies, time of biopsies and expected time delay in detection of GS7 calculated for various schedules to compare them.\\
+\texttt{Results and Limitations}: Roughly 50\% patients did not obtain GS7 in first 10 years in PRIAS. PSA velocity was a stronger predictor of GS7 with Hazard~Ratio~(increase from 1st to 3rd quartile):~2.47; 95\%CI:~1.93--2.99, than PSA value (Hazard~Ratio:~0.99; 95\%CI:~0.89--1.11). Internal validation: Time varying area under ROC curve for GS7 prediction between 0.62 and 0.69, and prediction error between 0.23 and 0.37. External validation: Results similar to internal validation only for Toronto, Memorial Sloan Kettering, and Johns Hopkins AS cohorts.\\
+\texttt{Conclusions}: We developed personalized risk based biopsy schedules as alternative to fixed schedules. To assist patients in biopsy decisions we provided total and time of biopsies, and expected time delay in detection of GS7, for fixed and personalized schedules. Personalized schedules update with more patient data over follow-up.\\
+\texttt{Patient Summary}: Personalized biopsy schedules are a novel alternative to fixed biopsy schedules (e.g., yearly biopsies). They utilize a patient's PSA and biopsy history to decide best time of biopsies. Personalized schedules can offer a better balance between number of biopsies and delay in detection of Gleason upgrade than yearly biopsies.
 \end{abstract}
